--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+    </queries>
     <application
         android:name=".app.NewsApp"
         android:allowBackup="true"
@@ -16,6 +20,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsApp"
         android:usesCleartextTraffic="true">
+        <activity
+            android:theme="@style/Theme.ReadNewsApp"
+            android:name=".view.read.ReadNewsActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="false" />
         <activity
             android:exported="true"
             android:name=".auth.LoginActivity"
