--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:configChanges="orientation|screenSize"
             android:exported="false" />
         <activity
+            android:windowSoftInputMode="adjustResize"
             android:exported="true"
             android:name=".auth.LoginActivity"
             android:label="@string/app_name"
@@ -40,7 +41,7 @@
 
         <activity
             android:exported="true"
-            android:windowSoftInputMode="adjustNothing"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.NewsApp.NoActionBar"
             android:configChanges="orientation|screenSize"
             android:name=".auth.SignupActivity"/>
